--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"Chrome 89"
 	],
 	"dependencies": {
+		"child-process": "^1.0.2",
 		"electron-context-menu": "^3.3.0",
 		"electron-reloader": "^1.2.3",
 		"electron-serve": "^1.1.0",
